[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/states/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/TitleFont.tres" type="FontFile" id=2]
[ext_resource path="res://resources/fonts/BoringNormalFont.tres" type="FontFile" id=3]
[ext_resource path="res://assets/fonts/Aileron-Regular.otf" type="FontFile" id=4]

[sub_resource type="FontFile" id=1]
font_data = ExtResource( 4 )

[sub_resource type="FontFile" id=2]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="C" type="CenterContainer" parent="."]
anchor_right = 0.7
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="C"]
offset_left = 149.0
offset_top = 101.0
offset_right = 566.0
offset_bottom = 499.0
custom_constants/separation = 24

[node name="Title" type="Label" parent="C/V"]
offset_right = 417.0
offset_bottom = 72.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Godot Shooter"

[node name="V" type="VBoxContainer" parent="C/V"]
unique_name_in_owner = true
offset_left = 58.0
offset_top = 96.0
offset_right = 358.0
offset_bottom = 398.0
custom_minimum_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="G" type="GridContainer" parent="C/V/V"]
offset_right = 300.0
offset_bottom = 102.0
custom_constants/v_separation = 6
custom_constants/h_separation = 12
columns = 2

[node name="NameLabel" type="Label" parent="C/V/V/G"]
offset_right = 88.0
offset_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "Name"
align = 2

[node name="NameLineEdit" type="LineEdit" parent="C/V/V/G"]
unique_name_in_owner = true
offset_left = 100.0
offset_right = 300.0
offset_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Guest"
max_length = 20
caret_blink = true
caret_blink_interval = 0.5

[node name="IpLabel" type="Label" parent="C/V/V/G"]
offset_top = 36.0
offset_right = 88.0
offset_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Address"
align = 2

[node name="IpLineEdit" type="LineEdit" parent="C/V/V/G"]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 36.0
offset_right = 300.0
offset_bottom = 66.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "localhost"
caret_blink = true
caret_blink_interval = 0.5

[node name="PortLabel" type="Label" parent="C/V/V/G"]
offset_top = 72.0
offset_right = 88.0
offset_bottom = 102.0
custom_fonts/font = ExtResource( 3 )
text = "Port"
align = 2

[node name="PortSpinBox" type="SpinBox" parent="C/V/V/G"]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 72.0
offset_right = 300.0
offset_bottom = 102.0
theme = SubResource( 3 )
max_value = 65535.0
value = 8380.0

[node name="H" type="HBoxContainer" parent="C/V/V"]
offset_top = 114.0
offset_right = 300.0
offset_bottom = 152.0
custom_constants/separation = 12

[node name="HostButton" type="Button" parent="C/V/V/H"]
unique_name_in_owner = true
offset_right = 144.0
offset_bottom = 38.0
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="C/V/V/H"]
unique_name_in_owner = true
offset_left = 156.0
offset_right = 300.0
offset_bottom = 38.0
size_flags_horizontal = 3
text = "Join"

[node name="FreePlayButton" type="Button" parent="C/V/V"]
unique_name_in_owner = true
offset_top = 164.0
offset_right = 300.0
offset_bottom = 202.0
text = "Free Play"

[node name="CreditsButton" type="Button" parent="C/V/V"]
unique_name_in_owner = true
offset_top = 214.0
offset_right = 300.0
offset_bottom = 252.0
text = "Credits"

[node name="QuitButton" type="Button" parent="C/V/V"]
offset_top = 264.0
offset_right = 300.0
offset_bottom = 302.0
text = "Quit"

[node name="Popup" type="AcceptDialog" parent="."]
unique_name_in_owner = true
offset_right = 500.0
offset_bottom = 250.0
window_title = ""
dialog_text = "Server Disconnected

Another player with that name is already in the server, please choose a new one."
dialog_autowrap = true

[connection signal="text_changed" from="C/V/V/G/NameLineEdit" to="." method="name_text_changed"]
[connection signal="text_changed" from="C/V/V/G/IpLineEdit" to="." method="address_text_changed"]
[connection signal="value_changed" from="C/V/V/G/PortSpinBox" to="." method="port_value_changed"]
[connection signal="pressed" from="C/V/V/H/HostButton" to="." method="host_session"]
[connection signal="pressed" from="C/V/V/H/JoinButton" to="." method="join_session"]
[connection signal="pressed" from="C/V/V/FreePlayButton" to="." method="free_play_session"]
[connection signal="pressed" from="C/V/V/CreditsButton" to="." method="go_to_credits"]
[connection signal="pressed" from="C/V/V/QuitButton" to="." method="quit_game"]
